JSAI/error/src/test/resources/base/array_a002.js
var arr = [];
var arr_str = arr.join(",")
print(arr_str);
var res = arr["0"];
print(res);

